crates/biome_js_analyze/tests/specs/nursery/noExcessiveClassesPerFile/valid/max-classes-option.js
/* should not generate diagnostics */
class InvalidClass1 { }
class InvalidClass2 { }
