crates/biome_js_analyze/tests/specs/nursery/noExcessiveClassesPerFile/invalid/zero-classes-option.js
/* should generate diagnostics */
class InvalidClass1 { }
